# orangery

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pixi.toml  pyproject.toml  requirements-docs.txt  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
.github/workflows/: condapackage.yml  pythonpackage.yml
ci/: cli-help.ps1
conda-recipe/: meta.yaml
docs/: Makefile  make.bat
docs/source/: cli.rst  conf.py  index.rst  manual.rst
docs/source/_static/: custom.css_t
docs/source/api/: modules.rst  orangery.ops.rst  orangery.rst  orangery.tools.rst
docs/source/cli/: cli.adjust.txt  cli.cutfill.txt  cli.geodetic.txt  cli.info.txt  cli.orangery.txt  cli.section.txt  cli.segment.txt
docs/source/themes/orangery/: theme.conf
examples/: analysis.json  change_analysis.py  convert_jxl.py  cutfill.py  example.py  format.json  geodetic.py  jxl2text.py  opus-info.py  opus.py  opus_info.py  plots.py  translate_to_coords.py
examples/data/: Topo-20100331.csv  file_2004.csv  file_2010.csv
examples/json/: codebook.json  materials.json
examples/opus/: 2010096o.10o.xml
orangery/: __init__.py  _version.py  change.py  configuration.py  filter.py  section.py  survey.py
orangery/cli/: adjust.py  cutfill.py  defaults.py  geodetic.py  info.py  orangery.py  planview.py  section.py  segment.py  util.py
orangery/core/: api.py  change.py  evaluation.py  filter.py  section.py  survey.py
orangery/ops/: correction.py  geodetic.py  geometry.py  text.py
orangery/tools/: console.py  opus.py  plotting.py  units.py
tests/: test_cli.py
